--- a/styles/cardlist.scss
+++ b/styles/cardlist.scss
@@ -1,12 +1,14 @@
 
 .back {
-  background: url('http://previews.123rf.com/images/shottythefirst/shottythefirst1403/shottythefirst140300042/26763558-Abstract-Blue-Playing-Card-Back-Pattern-Texture-Stock-Photo.jpg');
+  background: url(/images/200px-Card_back-Classic.png);
+  background-size: 100% 100%;
 }
 
 .card.stack{
   float:right;
+  background-size: 100% 100%;
   margin-top: 40px;
-  background: url('http://previews.123rf.com/images/shottythefirst/shottythefirst1403/shottythefirst140300042/26763558-Abstract-Blue-Playing-Card-Back-Pattern-Texture-Stock-Photo.jpg');
+  background: url(/images/200px-Card_back-Classic.png);
 }
 
 
@@ -35,7 +37,7 @@ main {
   position:relative;
   float:left;
   background-color:#fcfcfc;
-  border-radius:2%;
+  border-radius:6%;
   box-shadow:1px 2px 1px rgba(0,0,0,.6);
   display:block;
   width:75px;
