--- a/styles/leftAndright.scss
+++ b/styles/leftAndright.scss
@@ -53,12 +53,12 @@ body {
 
 }
 
-.left .Game1:hover {
+.right .Game2:hover {
   background: lighten(#15706f, 5%);
   border-bottom: 5px solid darken(#15706f, 5%);
 }
 
-.left .Game1 :active { border: none; }
+.right .Game2:active { border: none; }
 
 .userInformationHead {
 
@@ -66,6 +66,7 @@ body {
  border :2px groove;
  background-color: #C5B358;
  border-radius: 2em;
+  padding-left: 2em;
 }
 
 .userInformationBody {
@@ -75,6 +76,8 @@ body {
  margin-bottom: 30px;
  height: 120px;
  border-radius: 2em;
+ padding-left: 2em;
+ font-size: 2em;
 }
 
 .whosOnlineHead {
@@ -83,6 +86,7 @@ body {
  border :2px groove;
  background-color: #ffec8b;
  border-radius: 2em;
+  padding-left: 2em;
 }
 
 .whosOnlineBody {
@@ -92,6 +96,8 @@ body {
  margin-bottom: 30px;
  height: 120px;
  border-radius: 2em;
+  padding-left: 2em;
+ font-size: 1em;
 }
 
 
